# cudatemplates

./: CMakeLists.txt  CTestConfig.cmake  CudaTemplatesConfig.cmake  CudaTemplatesConfigVersion.cmake  CudaTemplatesConfigVersion.cmake.in  Doxyfile  Doxyfile.in  FindCudaTemplates.cmake  README.Debian  cudatemplates.spec  cudatemplates.spec.in
debian/: changelog  clean  control  copyright  rules
doc/: intro.hpp  rsync.sh
include/: CMakeLists.txt
include/cudatemplates/: CMakeLists.txt  array.hpp  convert.hpp  copy.hpp  copy_constant.hpp  cublas.hpp  cuda_gcc43_compat.hpp  cufft.hpp  cufft_common.hpp  cufftpp.hpp  devicememory.hpp  devicememorylinear.hpp  devicememorymapped.hpp  devicememorypitched.hpp  devicememoryreference.hpp  deviceproperties.hpp  dimension.hpp  error.hpp  event.hpp  gilreference.hpp  hostmemory.hpp  hostmemoryheap.hpp  hostmemorylocked.hpp  hostmemoryreference.hpp  image.hpp  iplreference.hpp  iterator.hpp  itkreference.hpp  layout.hpp  pack.hpp  pointer.hpp  pointerstorage.hpp  size.hpp  staticassert.hpp  storage.hpp  stream.hpp  symbol.hpp  vecmult.hpp  vector.hpp
include/cudatemplates/auto/: CMakeLists.txt  copy.hpp.in  copy_array.hpp  copy_devicememorylinear.hpp  copy_devicememorypitched.hpp  copy_devicememoryreference.hpp  copy_gilreference.hpp  copy_hostmemoryheap.hpp  copy_hostmemorylocked.hpp  copy_hostmemoryreference.hpp  copy_iplreference.hpp  copy_itkreference.hpp  generic.hpp.in  pack.cpp  pack.hpp  plan.hpp.in  plan_complex_complex_1d.hpp  plan_complex_complex_2d.hpp  plan_complex_complex_3d.hpp  plan_complex_real_1d.hpp  plan_complex_real_2d.hpp  plan_complex_real_3d.hpp  plan_real_complex_1d.hpp  plan_real_complex_2d.hpp  plan_real_complex_3d.hpp  specdim.hpp.in  specdim_array.hpp  specdim_array1d.hpp  specdim_array2d.hpp  specdim_array3d.hpp  specdim_bufferobject.hpp  specdim_bufferobject1d.hpp  specdim_bufferobject2d.hpp  specdim_bufferobject3d.hpp  specdim_devicememorylinear.hpp  specdim_devicememorylinear1d.hpp  specdim_devicememorylinear2d.hpp  specdim_devicememorylinear3d.hpp  specdim_devicememorypitched.hpp  specdim_devicememorypitched1d.hpp  (+54 more)
include/cudatemplates/cublas/: CMakeLists.txt  blas1.hpp.in  blas1_complex.hpp  blas1_double.hpp  blas1_float.hpp  blas2.hpp.in  blas2_complex.hpp  blas2_float.hpp  blas3.hpp.in  blas3_float.hpp
include/cudatemplates/graphics/: copy.hpp  resource.hpp
include/cudatemplates/graphics/opengl/: buffer.hpp  image.hpp  resource.hpp  texture.hpp
include/cudatemplates/opengl/: bufferobject.hpp  copy.hpp  error.hpp  texture.hpp  type.hpp
include/cudatemplates/specializations/: CMakeLists.txt  hostmemoryheap.hpp.in  specialize_dim.hpp.in
src/: CMakeLists.txt
src/auto/: convert_type.cmake  convert_type.cu  convert_type_begin.cu  convert_type_template.cu
testing/: CMakeLists.txt  array.cpp  array_by_value.cu  blas.cpp  border.cpp  buffer_object.cpp  buffer_object.hpp  buffer_object_init.cu  color_speed_test.cu  color_speed_test_kernels.cu  compat.cu  convert.cpp  convert.cu  copy.cpp  copy.cu  copy_instantiate.cu  crazyFindOGLTextureAdress.cpp  crazyFindOGLTextureAdress.cu  create_test.pl  demo.cpp  fft.cpp  fillrate.cu  gil.cpp  ipl.cpp  itk.cpp  itktest.cpp  kernel.cu  main.cpp  mapped.cu  memset.cpp  ogl_texture.cu  pack.cu  precision.cu  render.cu  streams.cu  symbol.cu  symbol_plain.cu  test1d.cpp  test2d.cpp  test3d.cpp  (+5 more)
testing/bugs/: CMakeLists.txt  bug1.cu  bug2.cpp  bug3.cu  bug4.cu  bug5.cu  bug7.cu  bug8.cpp  bug9.cpp  float3.cpp
testing/bugs/bug6/: README.txt  nvcctest1.cu  nvcctest2.cu
web/: cudatemplates.session  cudatemplates.webprj  index.html  overview.html
